--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://cloudstack12.github.io/gabremodeling3/">https://cloudstack12.github.io/gabremodeling3/</a><br>
+                <a target="_bLank" href="https://astonishing-fairy-14685f.netlify.app/">https://astonishing-fairy-14685f.netlify.app/</a><br>
+                <a target="_bLank" href="https://gabremodeling3.s3.ap-northeast-1.amazonaws.com/gabremodeling3/index.html">https://gabremodeling3.s3.ap-northeast-1.amazonaws.com/gabremodeling3/index.html</a><br>
             </section>
 
         </div>
